--- a/template/package.json
+++ b/template/package.json
@@ -29,6 +29,10 @@
     "vue-router": "^3.0.1"{{/router}}
   },
   "devDependencies": {
+    "coffee-loader": "^0.9.0",
+    "coffeescript": "^2.2.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     {{#lint}}
     "babel-eslint": "^8.2.1",
     "eslint": "^4.15.0",
