--- a/template/package.json
+++ b/template/package.json
@@ -25,6 +25,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "phaser": "^3.1.1",
     "vue": "^2.5.2"{{#router}},
     "vue-router": "^3.0.1"{{/router}}
   },
